crates/aranya-policy-compiler/tests/data/commands/attributes_must_be_literals.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
2 |     attributes { i: false || true }
  |                     ^^^^^^^^^^^^^ This expression is not valid in a const context
